--- a/VCEEnc/VCEEnc.zh.ini
+++ b/VCEEnc/VCEEnc.zh.ini
@@ -1,4 +1,25 @@
 [VCEENC]
+;コマンドライン部分で共通で使用できる置換名
+;%{vidpath} … 一時動画ファイル名(フルパス)
+;%{audpath} … 一時音声ファイル名(フルパス)
+;%{tmpdir}  … 一時フォルダ名(最後の\無し)
+;%{tmpfile} … 一時ファイル名(フルパス・拡張子除く)
+;%{tmpname} … 一時ファイル名(ファイル名のみ・拡張子除く)
+;%{savpath} … 出力ファイル名(フルパス)
+;%{savfile} … 出力ファイル名(フルパス・拡張子除く)
+;%{savname} … 出力ファイル名(ファイル名のみ・拡張子除く)
+;%{savdir}  … 出力フォルダ名(最後の\無し)
+;%{aviutldir} … Aviutl.exeのフォルダ名(最後の\無し)
+;%{chpath} … チャプターファイル名(フルパス)   (%{savfile}[chapter_appendix])
+;%{tcpath} … タイムコードファイル名(フルパス) (%{tmpfile}[tc_appendix])
+;%{muxout} … muxで作成する一時ファイル名(フルパス)
+;%{audencpath}   … 実行された音声エンコーダのパス
+;%{mp4muxerpath} … mp4 muxerのパス
+;%{mkvmuxerpath} … mkv muxerのパス
+
+;iniのバージョン
+;ver=2...SJIS(CP932), ver=3...UTF-8
+;ただし、基本的にはAviutlはSJISしか扱えないのでSJIS外の文字は使用しないこと
 ini_ver=3
 blog_url=http://rigaya34589.blog135.fc2.com/blog-category-12.html
 
@@ -14,22 +35,38 @@ ex_cmd_1=""
 ex_cmd_2_name=添加章节
 ex_cmd_2_chap=%{chpath}
 
-ex_cmd_3_name=chapter.auf 自动导出用
+ex_cmd_3_name=chapter.auf 自动输出
 ex_cmd_3_chap=%{aviutldir}\chapter.txt
 
 [SETTING_MUXER_MP4]
 dispname=L-SMASH remuxer
 filename=remuxer.exe
+;%{ex_cmd}     … 選択された ex_cmd  に置換
+;%{vd_cmd}     … 必要なとき vd_cmd に置換
+;%{au_cmd}     … 必要なとき aud_cmd に置換
+;%{tmp_cmd}    … (選択された時)mux一時フォルダ用オプションに置換
+;%{m_tmpdir} … mux用一時フォルダ名に置換
 out_ext=".mp4"
+;基礎となるコマンドライン
 base_cmd="%{ex_cmd} %{vd_cmd} %{au_cmd} -o "%{muxout}" "
+;映像をmuxする際のコマンドライン
 vd_cmd="-i "%{vidpath}""
+;音声をmuxする際の追加コマンドライン
 au_cmd="-i "%{audpath}""
+;タイムコードをmuxする際の追加コマンドライン
 tc_cmd=""
+;一時フォルダを指定する際の追加コマンドライン
 tmp_cmd=""
+;ヘルプ表示用
 help_cmd="--help"
+;ベージョン表示用
 ver_cmd="--help"
 
 [MODE_MUXER_MP4]
+;ここのカウント数はtc2mp4のカウント数とあわせること(空行を作ったりして合わせてください)
+;appleに対応がチェックされると "_apple" のコマンドラインが追加されます。
+;%{chapter} … "ex_cmd_x_chap"で指定されているファイル名に置換されます。
+;%{chap_apple} … "ex_cmd_x_chap"で指定されているファイルから作成されたapple形式のチャプターファイル名に置換されます。
 count=3
 
 ex_cmd_1_name=无
@@ -39,34 +76,20 @@ ex_cmd_2_name=添加章节
 ex_cmd_2="--chapter "%{chapter}""
 ex_cmd_2_chap=%{chpath}
 
-ex_cmd_3_name=chapter.auf 自动导出用
+ex_cmd_3_name=chapter.auf 自动输出
 ex_cmd_3="--chapter "%{chapter}""
-ex_cmd_3_chap=%{aviutldir}\chapter.%{pid}.txt
-
-[SETTING_MUXER_TC2MP4]
-dispname=timeline editor
-filename=timelineeditor.exe
-base_cmd=" %{tc_cmd} %{vd_cmd} "%{muxout}""
-vd_cmd=""%{vidpath}""
-tc_cmd="--timecode "%{tcpath}" --media-timescale %{fps_rate_times_4} --media-timebase %{fps_scale}"
-post_mux=0
-help_cmd="--help"
-ver_cmd="--help"
-
-[MODE_MUXER_TC2MP4]
-count=3
-
-ex_cmd_1_name=无
-
-ex_cmd_2_name=添加章节
-ex_cmd_2_chap=%{chpath}
-
-ex_cmd_3_name=chapter.auf 自动导出用
 ex_cmd_3_chap=%{aviutldir}\chapter.%{pid}.txt
 
 [SETTING_MUXER_MP4_RAW]
 dispname=L-SMASH   muxer
 filename=muxer.exe
+;%{vd_cmd}     … (必要なとき  )vd_cmd に置換
+;%{au_cmd}     … (必要なとき  )au_cmd に置換
+;%{delay_cmd}  … (必要なとき  )delay_cmd に置換
+;%{ex_cmd}     … (選択された  )ex_cmd  に置換
+;%{tc_cmd}     … (必要なとき  )tc_cmd  に置換
+;%{tmp_cmd}    … (選択された時)mux一時フォルダ用オプションに置換
+;%{m_tmpdir} … mux用一時フォルダ名に置換
 base_cmd="--isom-version 6 %{ex_cmd} %{vd_cmd} %{au_cmd} --optimize-pd -o "%{muxout}" "
 vd_cmd="--file-format m4v -i "%{vidpath}"?fps=%{fps_rate}/%{fps_scale}"
 au_cmd="--file-format m4a -i "%{audpath}"%{delay_cmd}"
@@ -75,6 +98,10 @@ ver_cmd="--help"
 delay_cmd="?encoder-delay=%{delay}"
 
 [MODE_MUXER_MP4_RAW]
+;ここのカウント数はmp4のカウント数とあわせること(めんどい場合は空行を作って合わせてください)
+;appleに対応がチェックされると "_apple" のコマンドラインが追加されます。
+;%{chapter} … "ex_cmd_x_chap"で指定されているファイル名に置換されます。
+;%{chap_apple} … "ex_cmd_x_chap"で指定されているファイルから作成されたapple形式のチャプターファイル名に置換されます。
 count=3
 
 ex_cmd_1_name=无
@@ -84,14 +111,48 @@ ex_cmd_2_name=添加章节
 ex_cmd_2="--chapter "%{chapter}""
 ex_cmd_2_chap=%{chpath}
 
-ex_cmd_3_name=chapter.auf 自动导出用
+ex_cmd_3_name=chapter.auf 自动输出
 ex_cmd_3="--chapter "%{chapter}""
+ex_cmd_3_chap=%{aviutldir}\chapter.%{pid}.txt
+
+
+[SETTING_MUXER_TC2MP4]
+dispname=timeline editor
+filename=timelineeditor.exe
+;%{vd_cmd}     … (必要なとき  )vd_cmd に置換
+;%{au_cmd}     … (必要なとき  )au_cmd に置換
+;%{ex_cmd}     … (選択された  )ex_cmd  に置換
+;%{tc_cmd}     … (必要なとき  )tc_cmd  に置換
+;%{tmp_cmd}    … (選択された時)mux一時フォルダ用オプションに置換
+;%{m_tmpdir} … mux用一時フォルダ名に置換
+base_cmd=" %{tc_cmd} %{vd_cmd} "%{muxout}""
+vd_cmd=""%{vidpath}""
+tc_cmd="--timecode "%{tcpath}" --media-timescale %{fps_rate_times_4} --media-timebase %{fps_scale}"
+post_mux=0
+help_cmd="--help"
+ver_cmd="--help"
+
+[MODE_MUXER_TC2MP4]
+;ここのカウント数はmp4のカウント数とあわせること(めんどい場合は空行を作って合わせてください)
+;appleに対応がチェックされると "_apple" のコマンドラインが追加されます。
+;%{chapter} … "ex_cmd_x_chap"で指定されているファイル名に置換されます。
+;%{chap_apple} … "ex_cmd_x_chap"で指定されているファイルから作成されたapple形式のチャプターファイル名に置換されます。
+count=3
+
+ex_cmd_1_name=无
+
+ex_cmd_2_name=添加章节
+ex_cmd_2_chap=%{chpath}
+
+ex_cmd_3_name=chapter.auf 自动输出
 ex_cmd_3_chap=%{aviutldir}\chapter.%{pid}.txt
 
 
 [SETTING_MUXER_MKV]
 dispname=mkvmerge
 filename=mkvmerge.exe
+;%{au_cmd}     … (必要なとき)aud_cmd に置換
+;%{ex_cmd}     … (選択された)ex_cmd  に置換
 base_cmd=" -o "%{muxout}" %{tc_cmd} %{vd_cmd} %{au_cmd} %{ex_cmd}"
 vd_cmd=""%{vidpath}""
 au_cmd=""%{audpath}""
@@ -100,6 +161,7 @@ help_cmd="--version;--help"
 ver_cmd="--version"
 
 [MODE_MUXER_MKV]
+;%{chapter} … "ex_cmd_x_chap"で指定されているファイル名に置換されます。
 count=3
 
 ex_cmd_1_name=无
@@ -109,14 +171,20 @@ ex_cmd_2_name=添加章节
 ex_cmd_2="--chapters "%{chapter}""
 ex_cmd_2_chap=%{chpath}
 
-ex_cmd_3_name=chapter.auf 自动导出用
+ex_cmd_3_name=chapter.auf 自动输出
 ex_cmd_3="--chapters "%{chapter}""
 ex_cmd_3_chap=%{aviutldir}\chapter.%{pid}.txt
 
 [SETTING_MUXER_MPG]
 dispname=mplex
 filename=mplex.exe
+;%{ex_cmd}     … 選択された ex_cmd  に置換
+;%{au_cmd}     … 必要なとき aud_cmd に置換
+;%{tmp_cmd}    … (選択された時)mux一時フォルダ用オプションに置換
+;%{m_tmpdir} … mux用一時フォルダ名に置換
+;基礎となるコマンドライン
 base_cmd="%{ex_cmd} -o "%{muxout}" %{vd_cmd} %{au_cmd}"
+;音声をmuxする際の追加コマンドライン
 vd_cmd=""%{vidpath}""
 au_cmd=""%{audpath}""
 help_cmd="--help"
@@ -132,6 +200,7 @@ ex_cmd_2_name=DVD
 ex_cmd_2="-f 9"
 
 [APPENDIX]
+;(一時)ファイルの後付修飾子
 wav_appendix=.tmp.wav
 tc_appendix=.timecode.txt
 chap_appendix=.chapter.txt
@@ -139,8 +208,12 @@ chap_apple_appendix=.apple.txt
 qp_appendix=.qp.txt
 
 [FILENAME_REPLACE]
+;一時ファイル名(ディレクトリ・拡張子は除く)ではここの設定に従い置換します。
+;主にmp4box等のダメ文字回避の為です。最終的には指定したファイル名に戻します。
+;区切りは ":" です。
 
 [AUDIO]
+;音声エンコーダリスト 音声エンコーダのセクション名になります。[SETTING_xxx]みたいな感じ
 count=19
 audio_encoder_1=AAC_NERO
 audio_encoder_2=AAC_FAW
@@ -163,12 +236,26 @@ audio_encoder_18=MP3_FFMPEG
 audio_encoder_19=OPUS_FFMPEG
 
 [SETTING_AAC_NERO]
+;エンコーダのGUI上での表示名
 dispname="NeroAacEnc"
+
+;実行ファイル名(拡張子含む)
 filename="NeroAacEnc.exe"
+
+;出力音声ファイル後付修飾子
+;(mkv/mp4等動画の拡張子とかぶらないようにしてください)
 aud_appendix="_audio.m4a"
 raw_appendix="_audio.m4a"
+
+;パイプ入力が可能か
 pipe_input=1
+
+;ログ表示の可否
 disable_log=1
+
+;コマンドラインのベース
+;%{wavpath}  … 音声入力に置換。パイプ("-") か wavファイル
+;%{mode}  … 追加オプションに置換。 (以下[MODE_xxx]で指定)
 base_cmd=" -ignorelength %{mode} %{2pass_cmd} -if "%{wavpath}" -of "%{audpath}" "
 2pass_cmd="-2pass"
 help_cmd="-help"
@@ -177,19 +264,27 @@ raw_cmd="dummy"
 [MODE_AAC_NERO]
 count=4
 
-mode_1=" AAC-LC 指定码率"
+mode_1=" AAC-LC 自定义码率"
+;コマンドラインの置換文字列の指定
 mode_1_cmd_replace=%{rate}
+;表示名の置換文字列の指定
 mode_1_display_replace=
+;コマンドライン
 mode_1_cmd="-lc -br %{rate}000"
+;ビットレートモードを使用するか
 mode_1_bitrate=1
+;指定できる最小値
 mode_1_bitrate_min=8
+;指定できる最大値
 mode_1_bitrate_max=512
+;クリックでの変化幅
 mode_1_bitrate_step=32
+;ビットレートデフォルト値
 mode_1_bitrate_default=256
 mode_1_2pass=1
 mode_1_delay=2624
 
-mode_2=" HE-AAC 指定码率"
+mode_2=" HE-AAC 自定义码率"
 mode_2_cmd_replace=%{rate}
 mode_2_display_replace=
 mode_2_cmd="-he -br %{rate}000"
@@ -201,7 +296,7 @@ mode_2_bitrate_default=64
 mode_2_2pass=1
 mode_2_delay=4672
 
-mode_3=" HE-AAC v2 指定码率"
+mode_3=" HE-AAC v2 自定义码率"
 mode_3_cmd_replace=%{rate}
 mode_3_display_replace=
 mode_3_cmd="-hev2 -br %{rate}000"
@@ -213,9 +308,12 @@ mode_3_bitrate_default=32
 mode_3_2pass=1
 mode_3_delay=5616
 
+;品質指定
 mode_4=" Q-Based AAC %{dispList}~kbps"
 mode_4_cmd="-q %{cmdList}"
+;表示名の %{dispList} の置換に用いる
 mode_4_dispList=320,300,250,190,160,125,100,65,56,48,32
+;コマンドラインの %{cmdList} の置換に用いる (表示名のリストの数と対応させる)
 mode_4_cmdList=1.000,0.740,0.625,0.515,0.430,0.365,0.315,0.220,0.190,0.170,0.125
 mode_4_delay=2624
 
@@ -226,22 +324,25 @@ codec="faw"
 filename=""
 aud_appendix="_audio.aac"
 pipe_input=0
-enable_rf64=1
 base_cmd=""
 
 
 [MODE_AAC_FAW]
 count=3
 
-mode_1=" 去FAW(full size)"
+;AAC_FAWのフルサイズ用を1番目、ハーフサイズ用を2番目に書きます。
+;入れ替えたりしないでください。壊れます。
+mode_1=" FAW解除(full size)"
 mode_1_cmd=" "
 
-mode_2=" 去FAW(half size)"
+mode_2=" FAW解除(half size)"
 mode_2_cmd=" "
+;ハーフサイズ用に8bit出力を指定します。
 mode_2_convert8bit=1
 
-mode_3=" 去FAW(half size mix)"
+mode_3=" FAW解除(half size mix)"
 mode_3_cmd=" "
+;ハーフサイズ用に8bit出力を指定します。
 mode_3_convert8bit=2
 
 [SETTING_AAC_QTAAC]
@@ -258,8 +359,8 @@ ver_cmd="--help"
 
 [MODE_AAC_QTAAC]
 count=5
-
-mode_1=" ABR (AAC) 指定码率"
+;自定义码率
+mode_1=" ABR (AAC) 自定义码率"
 mode_1_cmd="--abr %{rate}"
 mode_1_bitrate=1
 mode_1_bitrate_min=8
@@ -268,7 +369,7 @@ mode_1_bitrate_step=32
 mode_1_bitrate_default=256
 mode_1_delay=2112
 
-mode_2=" ABR (HE-AAC) 指定码率"
+mode_2=" ABR (HE-AAC) 自定义码率"
 mode_2_cmd="--he --abr %{rate}"
 mode_2_bitrate=1
 mode_2_bitrate_min=8
@@ -277,7 +378,8 @@ mode_2_bitrate_step=8
 mode_2_bitrate_default=64
 mode_2_delay=5184
 
-mode_3=" CVBR (AAC) 指定码率"
+;CVBRモード
+mode_3=" CVBR (AAC) 自定义码率"
 mode_3_cmd="--cvbr %{rate}"
 mode_3_bitrate=1
 mode_3_bitrate_min=8
@@ -286,7 +388,7 @@ mode_3_bitrate_step=32
 mode_3_bitrate_default=256
 mode_3_delay=2112
 
-mode_4=" CVBR (HE-AAC) 指定码率"
+mode_4=" CVBR (HE-AAC) 自定义码率"
 mode_4_cmd="--he --cvbr %{rate}"
 mode_4_bitrate=1
 mode_4_bitrate_min=8
@@ -295,9 +397,12 @@ mode_4_bitrate_step=8
 mode_4_bitrate_default=64
 mode_4_delay=5184
 
+;品質指定
 mode_5=" TrueVBR %{dispList}~kbps"
 mode_5_cmd="--tvbr %{cmdList}"
+;表示名の %{dispList} の置換に用いる
 mode_5_dispList=300,250,230,210,190,160,145,130,110,100,90,80,70,50,40
+;コマンドラインの %{cmdList} の置換に用いる (表示名のリストの数と対応させる)
 mode_5_cmdList=127,118,109,100,91,82,73,63,54,45,36,27,18,9,0
 
 [SETTING_MP3_LAME]
@@ -313,16 +418,21 @@ ver_cmd="--help"
 [MODE_MP3_LAME]
 count=3
 
+;ABR mode
 mode_1=" ABR %{dispList}kbps"
 mode_1_cmd="--abr %{cmdList}"
+;表示名の %{dispList} の置換に用いる
 mode_1_dispList=320,256,224,192,160,128,112,96,80,64,48,32
+;コマンドラインの %{cmdList} の置換に用いる (表示名のリストの数と対応させる)
 mode_1_cmdList=320,256,224,192,160,128,112,96,80,64,48,32
 
+;CBR mode
 mode_2=" CBR %{dispList}kbps"
 mode_2_cmd="--cbr -b %{cmdList}"
 mode_2_dispList=320,256,224,192,160,128,112,96,80,64,48,32
 mode_2_cmdList=320,256,224,192,160,128,112,96,80,64,48,32
 
+;VBR mode
 mode_3=" VBR q %{dispList}"
 mode_3_cmd="-V %{cmdList}"
 mode_3_dispList=0 (best),1,2,3,4,5,6,7,8,9 (poor)
@@ -330,7 +440,7 @@ mode_3_cmdList=0,1,2,3,4,5,6,7,8,9
 
 
 [SETTING_AAC_EXT_BS]
-dispname="PV系列 提取AAC"
+dispname="PV系列 AAC抽出"
 filename="ext_bs.exe"
 aud_appendix="_audio.aac"
 pipe_input=0
@@ -338,7 +448,7 @@ base_cmd=" "%{wavpath}" "%{audpath}" "
 
 [MODE_AAC_EXT_BS]
 count=1
-mode_1=" 提取AAC"
+mode_1=" AAC抽出"
 mode_1_cmd=""
 
 
@@ -355,7 +465,9 @@ ver_cmd="-version"
 count=1
 mode_1=" AC3 %{dispList}kbps"
 mode_1_cmd="-ab %{cmdList}000"
+;表示名の %{dispList} の置換に用いる
 mode_1_dispList=448,384,320,256,192,128
+;コマンドラインの %{cmdList} の置換に用いる (表示名のリストの数と対応させる)
 mode_1_cmdList=448,384,320,256,192,128
 
 
@@ -368,12 +480,14 @@ base_cmd=" --ignorelength %{mode} -o "%{audpath}" "%{wavpath}" "
 help_cmd="-h"
 ver_cmd="--version"
 
+;mp4に入れられない
 unsupported_mp4=1
 
 [MODE_OGG_VORBIS]
 count=2
 
-mode_1=" 指定码率"
+;自定义码率
+mode_1=" 自定义码率"
 mode_1_cmd="-b %{rate}"
 mode_1_bitrate=1
 mode_1_bitrate_min=45
@@ -381,23 +495,29 @@ mode_1_bitrate_max=500
 mode_1_bitrate_step=32
 mode_1_bitrate_default=256
 
+;Quality
 mode_2=" Quality %{dispList}"
 mode_2_cmd="-q %{cmdList}"
+;表示名の %{dispList} の置換に用いる
 mode_2_dispList=10 (highest), 9, 8, 7, 6, 5, 4, 3, 2, 1, 0,-1 (lowest)
+;コマンドラインの %{cmdList} の置換に用いる (表示名のリストの数と対応させる)
 mode_2_cmdList=10,9,8,7,6,5,4,3,2,1,0,-1
 
 [SETTING_WAV]
-dispname="导出WAV"
+dispname="WAV输出"
+;実行ファイル名无で何も行わない
 filename=""
+;wav_appendixに合わせる
 aud_appendix=".tmp.wav"
 pipe_input=0
 base_cmd=""
-
+enable_rf64=1
+;mp4に入れられない
 unsupported_mp4=1
 
 [MODE_WAV]
 count=1
-mode_1=" 导出WAV"
+mode_1=" WAV输出"
 mode_1_cmd=""
 
 [SETTING_AAC_QAAC]
@@ -413,8 +533,8 @@ raw_cmd="--adts"
 
 [MODE_AAC_QAAC]
 count=6
-
-mode_1=" ABR (AAC) 指定码率"
+;自定义码率
+mode_1=" ABR (AAC) 自定义码率"
 mode_1_cmd="-q 2 --abr %{rate}"
 mode_1_bitrate=1
 mode_1_bitrate_min=8
@@ -424,7 +544,7 @@ mode_1_bitrate_default=256
 mode_1_use_remuxer=1
 mode_1_delay=2112
 
-mode_2=" ABR (HE-AAC) 指定码率"
+mode_2=" ABR (HE-AAC) 自定义码率"
 mode_2_cmd="-q 2 --he --abr %{rate}"
 mode_2_bitrate=1
 mode_2_bitrate_min=8
@@ -434,7 +554,8 @@ mode_2_bitrate_default=64
 mode_2_use_remuxer=1
 mode_2_delay=5184
 
-mode_3=" CVBR (AAC) 指定码率"
+;CVBR
+mode_3=" CVBR (AAC) 自定义码率"
 mode_3_cmd="-q 2 --cvbr %{rate}"
 mode_3_bitrate=1
 mode_3_bitrate_min=8
@@ -444,7 +565,7 @@ mode_3_bitrate_default=256
 mode_3_use_remuxer=1
 mode_3_delay=2112
 
-mode_4=" CVBR (HE-AAC) 指定码率"
+mode_4=" CVBR (HE-AAC) 自定义码率"
 mode_4_cmd="-q 2 --he --cvbr %{rate}"
 mode_4_bitrate=1
 mode_4_bitrate_min=8
@@ -454,9 +575,12 @@ mode_4_bitrate_default=64
 mode_4_use_remuxer=1
 mode_4_delay=5184
 
+;品質指定
 mode_5=" TrueVBR %{dispList}~kbps"
 mode_5_cmd="-q 2 --tvbr %{cmdList}"
+;表示名の %{dispList} の置換に用いる
 mode_5_dispList=300,250,230,210,190,160,145,130,110,100,90,80,70,50,40
+;コマンドラインの %{cmdList} の置換に用いる (表示名のリストの数と対応させる)
 mode_5_cmdList=127,118,109,100,91,82,73,63,54,45,36,27,18,9,0
 mode_5_use_remuxer=1
 mode_5_delay=2112
@@ -477,6 +601,7 @@ ver_cmd="--check"
 
 [MODE_ALAC_REFALAC]
 count=1
+;自定义码率
 mode_1=" Apple Lossless (ALAC)"
 mode_1_cmd=""
 mode_1_use_remuxer=1
@@ -491,15 +616,28 @@ ver_cmd="-h"
 
 [MODE_MP4ALSRM23]
 count=1
+;自定义码率
 mode_1=" MPEG4 Audio Lossless Coding"
 mode_1_cmd=""
 
 [SETTING_AAC_FDKAAC_FFMPEG]
+;エンコーダのGUI上での表示名
 dispname="fdk-aac (ffmpeg)"
+
+;実行ファイル名(拡張子含む)
 filename="ffmpeg.exe"
+
+;出力音声ファイル後付修飾子
+;(mkv/mp4等動画の拡張子とかぶらないようにしてください)
 aud_appendix="_audio.m4a"
 raw_appendix="_audio.m4a"
+
+;パイプ入力が可能か
 pipe_input=1
+
+;コマンドラインのベース
+;%{wavpath}  … 音声入力に置換。パイプ("-") か wavファイル
+;%{mode}  … 追加オプションに置換。 (以下[MODE_xxx]で指定)
 base_cmd=" -f wav -ignore_length 1 -i "%{wavpath}" -y -acodec libfdk_aac -afterburner 1 %{mode} "%{audpath}" "
 
 help_cmd="-h full"
@@ -509,7 +647,7 @@ ver_cmd="-version"
 [MODE_AAC_FDKAAC_FFMPEG]
 count=3
 
-mode_1=" AAC-LC 指定码率"
+mode_1=" AAC-LC 自定义码率"
 mode_1_cmd="-profile:a aac_low -ab %{rate}000"
 mode_1_bitrate=1
 mode_1_bitrate_min=28
@@ -519,7 +657,7 @@ mode_1_bitrate_default=256
 mode_1_use_remuxer=1
 mode_1_delay=2048
 
-mode_2=" HE-AAC 指定码率"
+mode_2=" HE-AAC 自定义码率"
 mode_2_cmd="-profile:a aac_he -ab %{rate}000"
 mode_2_bitrate=1
 mode_2_bitrate_min=28
@@ -530,7 +668,7 @@ mode_2_use_remuxer=1
 mode_2_2pass=1
 mode_2_delay=5056
 
-mode_3=" HE-AAC v2 指定码率"
+mode_3=" HE-AAC v2 自定义码率"
 mode_3_cmd="-profile:a aac_he_v2 -ab %{rate}000"
 mode_3_bitrate=1
 mode_3_bitrate_min=28
@@ -549,13 +687,16 @@ base_cmd=" %{mode} -6 -f -s -o "%{audpath}" "%{wavpath}" "
 help_cmd="-h"
 ver_cmd="-v"
 
+;mp4に入れられない
 unsupported_mp4=1
 
 [MODE_FLAC]
 count=1
 mode_1=" flac - level %{dispList}"
 mode_1_cmd="--compression-level-%{cmdList}"
+;表示名の %{dispList} の置換に用いる
 mode_1_dispList=0 (高速),1,2,3,4,5,6,7,8 (高压缩)
+;コマンドラインの %{cmdList} の置換に用いる (表示名のリストの数と対応させる)
 mode_1_cmdList=0,1,2,3,4,5,6,7,8
 
 [SETTING_AAC_FDKAAC]
@@ -571,8 +712,8 @@ ver_cmd="-h"
 
 [MODE_AAC_FDKAAC]
 count=3
-
-mode_1=" AAC-LC 指定码率"
+;自定义码率
+mode_1=" AAC-LC 自定义码率"
 mode_1_cmd=" -p 2 -b %{rate}"
 mode_1_bitrate=1
 mode_1_bitrate_min=8
@@ -582,7 +723,7 @@ mode_1_bitrate_default=256
 mode_1_use_remuxer=1
 mode_1_delay=2048
 
-mode_2=" HE-AAC 指定码率"
+mode_2=" HE-AAC 自定义码率"
 mode_2_cmd=" -p 5 -b %{rate}"
 mode_2_bitrate=1
 mode_2_bitrate_min=8
@@ -592,7 +733,7 @@ mode_2_bitrate_default=64
 mode_2_use_remuxer=1
 mode_2_delay=5056
 
-mode_3=" HE-AAC v2 指定码率"
+mode_3=" HE-AAC v2 自定义码率"
 mode_3_cmd=" -p 29 -b %{rate}"
 mode_3_bitrate=1
 mode_3_bitrate_min=8
@@ -611,12 +752,13 @@ base_cmd=" --ignorelength %{mode} "%{wavpath}" "%{audpath}" "
 help_cmd="-h"
 ver_cmd="-V"
 
+;mp4に入れられない
 unsupported_mp4=0
 
 [MODE_OGG_OPUS]
 count=3
 
-mode_1=" VBR 指定码率"
+mode_1=" VBR 自定义码率"
 mode_1_cmd=" --vbr --bitrate %{rate}"
 mode_1_bitrate=1
 mode_1_bitrate_min=6
@@ -624,7 +766,7 @@ mode_1_bitrate_max=256
 mode_1_bitrate_step=16
 mode_1_bitrate_default=96
 
-mode_2=" CVBR 指定码率"
+mode_2=" CVBR 自定义码率"
 mode_2_cmd=" --cvbr --bitrate %{rate}"
 mode_2_bitrate=1
 mode_2_bitrate_min=6
@@ -632,7 +774,7 @@ mode_2_bitrate_max=256
 mode_2_bitrate_step=16
 mode_2_bitrate_default=96
 
-mode_3=" CBR 指定码率"
+mode_3=" CBR 自定义码率"
 mode_3_cmd=" --hard-cbr --bitrate %{rate}"
 mode_3_bitrate=1
 mode_3_bitrate_min=6
@@ -653,7 +795,7 @@ raw_cmd="dummy"
 
 [MODE_AAC_FFMPEG]
 count=2
-mode_1=" AAC 指定码率"
+mode_1=" AAC 自定义码率"
 mode_1_cmd="-b:a %{rate}000"
 mode_1_bitrate=1
 mode_1_bitrate_min=16
@@ -663,7 +805,7 @@ mode_1_bitrate_default=256
 mode_1_use_remuxer=1
 mode_1_delay=1024
 
-mode_2=" AAC 指定码率 二重分离"
+mode_2=" AAC 自定义码率 双声道分离"
 mode_2_cmd=" -filter_complex channelsplit -channel_layout mono -b:a %{rate}000"
 mode_2_bitrate=1
 mode_2_bitrate_min=16
@@ -684,7 +826,7 @@ ver_cmd="-version"
 
 [MODE_ALAC_FFMPEG]
 count=1
-;指定码率
+;自定义码率
 mode_1=" Apple Lossless (ALAC)"
 mode_1_cmd=""
 mode_1_use_remuxer=1
@@ -701,7 +843,7 @@ ver_cmd="-version"
 
 [MODE_MP3_FFMPEG]
 count=1
-mode_1=" mp3 指定码率"
+mode_1=" mp3 自定义码率"
 mode_1_cmd="-b:a %{rate}000"
 mode_1_bitrate=1
 mode_1_bitrate_min=16
@@ -721,7 +863,7 @@ ver_cmd="-version"
 
 [MODE_OPUS_FFMPEG]
 count=1
-mode_1=" opus 指定码率"
+mode_1=" opus 自定义码率"
 mode_1_cmd="-b:a %{rate}000"
 mode_1_bitrate=1
 mode_1_bitrate_min=16
@@ -748,7 +890,7 @@ codec="copy"
 
 [MODE_AUDIO_INTERNAL_WAV]
 count=1
-mode_1=" 导出WAV"
+mode_1=" wav出力"
 
 [SETTING_AUDIO_INTERNAL_AAC]
 dispname="AAC"
@@ -756,7 +898,7 @@ codec="aac;enc_prm=aac_coder=twoloop"
 
 [MODE_AUDIO_INTERNAL_AAC]
 count=1
-mode_1=" 指定码率"
+mode_1=" 自定义码率"
 mode_1_bitrate=1
 mode_1_bitrate_min=16
 mode_1_bitrate_max=640
@@ -769,7 +911,7 @@ codec="libopus"
 
 [MODE_AUDIO_INTERNAL_LIBOPUS]
 count=1
-mode_1=" 指定码率"
+mode_1=" 自定义码率"
 mode_1_bitrate=1
 mode_1_bitrate_min=16
 mode_1_bitrate_max=640
@@ -782,7 +924,7 @@ codec="libmp3lame"
 
 [MODE_AUDIO_INTERNAL_LIBMP3LAME]
 count=1
-mode_1=" 指定码率"
+mode_1=" 自定义码率"
 mode_1_bitrate=1
 mode_1_bitrate_min=16
 mode_1_bitrate_max=448
@@ -795,7 +937,7 @@ codec="ac3"
 
 [MODE_AUDIO_INTERNAL_AC3]
 count=1
-mode_1=" 指定码率"
+mode_1=" 自定义码率"
 mode_1_bitrate=1
 mode_1_bitrate_min=16
 mode_1_bitrate_max=448
@@ -809,7 +951,7 @@ unsupported_mp4=1
 
 [MODE_AUDIO_INTERNAL_OGG]
 count=1
-mode_1=" 指定码率"
+mode_1=" 自定义码率"
 mode_1_bitrate=1
 mode_1_bitrate_min=16
 mode_1_bitrate_max=448
@@ -817,7 +959,7 @@ mode_1_bitrate_step=16
 mode_1_bitrate_default=256
 
 [SETTING_AUDIO_INTERNAL_ALAC]
-dispname="ALAC (mkv导出用)"
+dispname="ALAC (使用mkv封装)"
 codec="alac"
 
 [MODE_AUDIO_INTERNAL_ALAC]
@@ -841,15 +983,19 @@ auolink_only=-1
 [MODE_AUDIO_INTERNAL_AAC_FAW]
 count=3
 
-mode_1=" 去FAW(full size)"
+;AAC_FAWのフルサイズ用を1番目、ハーフサイズ用を2番目に書きます。
+;入れ替えたりしないでください。壊れます。
+mode_1=" FAW解除(full size)"
 mode_1_cmd=" "
 
-mode_2=" 去FAW(half size)"
+mode_2=" FAW解除(half size)"
 mode_2_cmd=" "
+;ハーフサイズ用に8bit出力を指定します。
 mode_2_convert8bit=1
 
-mode_3=" 去FAW(half size mix)"
+mode_3=" FAW解除(half size mix)"
 mode_3_cmd=" "
+;ハーフサイズ用に8bit出力を指定します。
 mode_3_convert8bit=2
 
 
